fixed position navbar and fix z-index

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -499,6 +499,24 @@ Ensure the default browser behavior of the `hidden` attribute.
 .top-2 {
   top: 0.5rem;
 }
+.top-10 {
+  top: 2.5rem;
+}
+.-top-10 {
+  top: -2.5rem;
+}
+.top-1 {
+  top: 0.25rem;
+}
+.top-20 {
+  top: 5rem;
+}
+.z-20 {
+  z-index: 20;
+}
+.z-50 {
+  z-index: 50;
+}
 .col-span-8 {
   grid-column: span 8 / span 8;
 }
@@ -585,6 +603,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mr-1 {
   margin-right: 0.25rem;
+}
+.mt-20 {
+  margin-top: 5rem;
 }
 .block {
   display: block;
@@ -813,6 +834,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
 .fill-current {
   fill: currentColor;
 }
@@ -899,6 +924,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .pt-12 {
   padding-top: 3rem;
+}
+.pt-10 {
+  padding-top: 2.5rem;
+}
+.pt-16 {
+  padding-top: 4rem;
 }
 .text-center {
   text-align: center;
